--- a/pages/recharge/recharge.wxml
+++ b/pages/recharge/recharge.wxml
@@ -1,24 +1,30 @@
 <!--pages/recharge/recharge.wxml-->
 <view class='recharge'>
-  <view class='v item1'>
-    <text>名称</text>
-    <text>幼信通娃娃机增值服务</text>
-  </view>
+    <view class='v item1'>
+      <text>名称</text>
+      <text>幼信通娃娃机增值服务</text>
+    </view>
     <view class='v item2'>
         <text>单价</text>
         <text>2元/次</text>
       </view>
     <view class='v item3'>
       <text>数量</text>
-      <text>5</text>
+      <view class='number'>
+        <image src='../../images/icon/减少.png' bindtap='reduce'></image>
+        <text>{{num}}</text>
+        <image src='../../images/icon/增加.png' bindtap='add'></image>
+      </view>
+      
     </view>
     <view class='v item4'>
       <text>总价</text>
-      <text>10元</text>
+      <text>{{total}}</text>
     </view>
-    <view class='v item4'>
-      <text>合计</text>
-      <text>￥10.0</text>
+ 
+    <view class='v item5'>
+       <text>合计:</text>
+      <text style='color:#FF5000'>￥{{total}}.0</text>
       <button class="apply">支付</button>
     </view>
 </view>
