--- a/pages/recharge/recharge.wxss
+++ b/pages/recharge/recharge.wxss
@@ -5,12 +5,46 @@ page{
   font-size: 10pt
 }
 .recharge{
-  background: #fff
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  position: relative;
+  margin-top: 20rpx;
 }
 .v{
-  margin-top: 30rpx;
-  border-bottom-color: 1px #F1F1F1;
-  width: 100%;
-  height: 90rpx;
-  padding: 3rpx;
+   display: flex;
+  flex-direction: row;
+  border-bottom: 2rpx solid #F1F1F1;
+  justify-content: space-between;
+  padding: 50rpx;
+  background: #fff;
 }
+.item5{
+  position: fixed;
+  width: 100%;
+  height: 40rpx;
+  left: 0;
+  bottom: 0;
+  align-items: center;
+}
+
+.apply{
+    font-size: 10pt;
+    color:#fff;
+    text-align: center;
+  position: relative;
+  width: 230rpx;
+  height: 100rpx;
+  right: -100rpx;
+  background-color: #FF5000;
+}
+image{
+   width:  55rpx;
+   height: 55rpx;
+  }
+  .number{
+    width: 200rpx;
+     display: flex;
+    flex-direction: row;
+   justify-content: space-around;
+  }
